cmake_minimum_required(VERSION 3.26)
#[[C && C++ 双语：“DataStructure C”改为“DataStructure LANGUAGES C CXX”]]
project(DataStructure LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
#[[add_executable(DataStructure main.c)]]

#[[DataStructure - 数据结构初学]]
#[[add_executable(DataStructure Data_Structure/C/test.c)]]
#[[add_executable(DataStructure Data_Structure/CXX/test.cpp)]]
#[[线性表略写]]
#[[add_executable(DataStructure Data_Structure/C/LinearList/2.1_a_SequenceList.c)]]
#[[线性表 - 参考]]
#[[add_executable(DataStructure Data_Structure/C/LinearList/2.1_SequenceList.c)]]
#[[线性表 - 自行规范]]
#[[add_executable(DataStructure Data_Structure/C/LinearList/2.1_SequenceList_2.c)]]
#[[线性表详细操作 - 参考]]
#[[add_executable(DataStructure Data_Structure/C/LinearList/2.1_SequenceList_A.c
        Data_Structure/C/LinearList/test.c)]]
#[[线性表详细操作 - 自行规范]]
#[[add_executable(DataStructure Data_Structure/C/LinearList/2.1_SequenceList_A_2.c)]]
#[[add_executable(DataStructure Data_Structure/C/LinearList/test.cpp)]]







#[[2.1 线性表 - 操作略写]]
#[[add_executable(DataStructure Data_Structure/CXX/C2_LinearList/2.1_a_SequenceList.cpp)]]
#[[2.1 线性表 - 操作详情 - 静态数组]]
#[[add_executable(DataStructure Data_Structure/CXX/C2_LinearList/2.1_SequenceList_1.cpp)]]
#[[2.1 线性表 - 操作详情 - 动态数组]]
#[[add_executable(DataStructure Data_Structure/CXX/C2_LinearList/2.1_SequenceList_2.cpp)]]
#[[2.2 单链表 - 无操作略写]]
#[[add_executable(DataStructure Data_Structure/CXX/C2_LinearList/2.2_a_SingleLinkedList.cpp)]]
#[[2.2 单链表 - 操作详情 - 带头结点]]
#[[add_executable(DataStructure Data_Structure/CXX/C2_LinearList/2.2_SingleLinkedList_1.cpp)]]
#[[2.2 单链表 - 操作详情 - 不带头结点]]
#[[add_executable(DataStructure Data_Structure/CXX/C2_LinearList/2.2_SingleLinkedList_2.cpp)]]







#[[LeetCode - 做题]]
#[[add_executable(DataStructure LeetCode/C/test.c)]]
#[[add_executable(DataStructure LeetCode/CXX/test.cpp)]]

#[[add_executable(DataStructure Data_Structure/Structure/Func.c)]]
#[[add_executable(DataStructure Data_Structure/Structure/Func2.c)]]








#[[408]]
#[[add_executable(DataStructure 408/C/test.c)]]
#[[add_executable(DataStructure 408/CXX/test.cpp)]]

#[[add_executable(DataStructure 408/C/C2/test.c)]]
#[[add_executable(DataStructure 408/CXX/C2/C2_2_2_3_01.cpp
        408/CXX/C2/C2_2_2_2_02_book.cpp
        408/CXX/C2/C2_2_2_2_03_test2.cpp)]]
#[[add_executable(DataStructure 408/CXX/C2/C2_2_2_3_03_test2.cpp)]]



#[[LeetCode]]
add_executable(LeetCode/C/number/a001_100/twoSum.c)
#[[add_executable(LeetCode/CXX/number/a001_100/twoSum.cpp
        LeetCode/CXX/number/a001_100/twoSum.h)]]














